fix: waiting cloak z-index

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -355,4 +355,5 @@ $flag-icon-css-path: '../vendor/flag-icon-css/flags';
   width: 100%;
   height: 100%;
   background: $toolbar-bg;
+  z-index: 1000;
 }
